tests/invalid/malformed_paren.c
int main() {
    return 2 (- 3);
}
// ERROR: Line 2, Error 2003